--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,5 @@
-html {
-    margin: 0;
-    padding: 0;
-}
+@import "./abstract/constants";
+
+@import "./base/base";
+
+@import "./components/switcher";
