--- a/src/css/components/_switcher.scss
+++ b/src/css/components/_switcher.scss
@@ -1,5 +1,12 @@
 .switch-input {
 	display: none;
+	&:checked + .switch {
+		background: #bada55;
+	}
+	&:checked + .switch:after {
+		left: calc(100% - 5px);
+		transform: translateX(-100%);
+	}
 }
 
 .switch {
@@ -11,29 +18,18 @@
 	display: block;
 	border-radius: 100px;
 	position: relative;
-}
-
-.switch:after {
-	content: '';
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	width: 20px;
-	height: 20px;
-	background: #fff;
-	border-radius: 90px;
-	transition: 0.3s;
-}
-
-.switch-input:checked + .switch {
-	background: #bada55;
-}
-
-.switch-input:checked + .switch:after {
-	left: calc(100% - 5px);
-	transform: translateX(-100%);
-}
-
-.switch:active:after {
-	width: 130px;
+	&::after {
+		content: '';
+		position: absolute;
+		top: 5px;
+		left: 5px;
+		width: 20px;
+		height: 20px;
+		background: #fff;
+		border-radius: 90px;
+		transition: 0.3s;
+	}
+	&:active:after {
+		width: 130px;
+	}
 }
