--- a/src/css/components/_switcher.scss
+++ b/src/css/components/_switcher.scss
@@ -1,3 +1,11 @@
+.switcher {
+	display: flex;
+	align-items: center;
+	& > * {
+		padding: 0 10px;
+	}
+}
+
 .switch-input {
 	display: none;
 	&:checked + .switch {
