feat: new sass files conntected

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,9 @@
 @import "./abstract/constants";
+@import "./abstract/mixins";
 
 @import "./base/base";
 
 @import "./components/switcher";
 @import "./components/hamburger";
+@import "./components/cards";
+@import "./components/main";
