feat: add styles for main page

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,4 +6,6 @@
 @import "./components/switcher";
 @import "./components/hamburger";
 @import "./components/cards";
-@import "./components/main";
+
+@import "./layouts/header";
+@import "./layouts/main";
