--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -2,10 +2,16 @@ html {
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 10px;
 }
 
-.head {
+body {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+body > * {
+    width: 100%;
 }
