feat: custom fonts connected

--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -1,7 +1,7 @@
 html {
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Baloo Paaji 2', Verdana, Geneva, sans-serif;
     font-size: 10px;
 }
 
