feat: add link in style.scss for menu

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,6 @@
 @import "./abstract/constants";
 @import "./abstract/mixins";
+@import "./abstract/placeholders";
 
 @import "./base/base";
 
@@ -9,3 +10,4 @@
 
 @import "./layouts/header";
 @import "./layouts/main";
+@import "./layouts/menu";
