feat: add new constants for menu

--- a/src/css/abstract/_constants.scss
+++ b/src/css/abstract/_constants.scss
@@ -1,4 +1,7 @@
 $color-primary: #bada55;
 $color-additional: #d3e597;
+$color-link: white;
+$color-menu-first: #a18cd1;
+$color-menu-second: #fbc2eb;
 
 $color-nonactive: grey;
