--- a/src/css/components/_cards.scss
+++ b/src/css/components/_cards.scss
@@ -2,6 +2,7 @@
 	width: 350px;
 	height: 300px;
 	margin: 20px;
+	cursor: pointer;
   border-radius: 10px;
 	box-shadow: 0px 0px 7px -2px;
 	&__wrapper {
