feat: add functionality for menu

--- a/src/css/abstract/_constants.scss
+++ b/src/css/abstract/_constants.scss
@@ -1,6 +1,6 @@
 $color-primary: #bada55;
 $color-additional: #d3e597;
-$color-link: white;
+$color-text: black;
 $color-menu-first: #a18cd1;
 $color-menu-second: #fbc2eb;
 
