--- a/src/css/layouts/_menu.scss
+++ b/src/css/layouts/_menu.scss
@@ -1,19 +1,32 @@
 .sidebar-wrapper {
-	display: none;
+	// visibility: hidden;
+	z-index: -1;
+	opacity: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba($color: #000000, $alpha: 0.5);
 	@extend %fix-position;
+	transition: all 0.3s ease;
+	&_active {
+		// visibility: visible;
+	opacity: 1;
+	z-index: 0;
+	}
 }
 
 .sidebar {
 	@extend %fix-position;
+	left: -330px;
 	width: 320px;
 	height: 100%;
 	padding: 65px 0 0 7px;
 	background: linear-gradient(45deg, $color-menu-first, $color-menu-second);
+	transition: all 0.3s ease;
+	&_active {
+		left: 0px;
+	}
 	&__link {
-		color: $color-link;
+		color: $color-text;
 		font-size: 1.9rem;
 		margin-bottom: 0px;
 		margin-block-start: 10px;
@@ -23,3 +36,4 @@
 		}
 	}
 }
+
