--- a/src/css/layouts/_menu.scss
+++ b/src/css/layouts/_menu.scss
@@ -26,10 +26,12 @@
 		left: 0px;
 	}
 	&__link {
-		color: $color-text;
-		font-size: 1.9rem;
+		display: block;
 		margin-bottom: 0px;
 		margin-block-start: 10px;
+		font-size: 2.4rem;
+		color: $color-text;
+		text-decoration: none;
 		cursor: pointer;
 		&:hover {
 			text-decoration: underline;
