refactor: changed name of classes

--- a/src/css/components/_cards.scss
+++ b/src/css/components/_cards.scss
@@ -5,6 +5,14 @@
 	cursor: pointer;
   border-radius: 10px;
 	box-shadow: 0px 0px 7px -2px;
+	&__text {
+		margin-top: 60px;
+		text-align: center;
+		font-size: 2.5rem;
+	}
+}
+
+.category-card {
 	&__wrapper {
 		display: flex;
 		justify-content: center;
@@ -16,10 +24,5 @@
 		top: 50px;
 		border: 10px solid white;
 		border-radius: 12px;
-	}
-	&__text {
-		margin-top: 60px;
-		text-align: center;
-		font-size: 2.5rem;
 	}
 }
