--- a/src/css/components/_cards.scss
+++ b/src/css/components/_cards.scss
@@ -3,8 +3,10 @@
 	height: 300px;
 	margin: 20px;
 	cursor: pointer;
-  border-radius: 10px;
+	border-radius: 10px;
 	box-shadow: 0px 0px 7px -2px;
+	perspective: 1000px;
+
 	&__text {
 		margin-top: 60px;
 		text-align: center;
@@ -18,11 +20,55 @@
 		justify-content: center;
 		background: linear-gradient(45deg, $color-primary, $color-additional);
 	}
+
 	&__image {
 		width: 250px;
-    position: relative;
+		position: relative;
 		top: 50px;
 		border: 10px solid white;
 		border-radius: 12px;
 	}
+}
+
+.word-card {
+	&__image {
+		width: 100%;
+		border-radius: 10px;
+	}
+
+	&__text {
+		margin-top: 5px;
+	}
+
+	&__rotate {
+		position: relative;
+		top: -70px;
+		left: 300px;
+		width: 35px;
+		height: 43px;
+		background-image: url("../assets/img/rotate.svg");
+	}
+
+	&_front, &_back {
+		position: absolute;
+  	width: 100%;
+  	height: 100%;
+  	left: 0;
+  	top: 0;
+  	transition: 1s;
+  	backface-visibility: hidden;
+  	border-radius: 10px;
+	}
+
+	&_back {
+		transform: rotateY(180deg);
+	}
+}
+
+.rotated-front {
+	transform: rotateY(180deg);
+}
+
+.rotated-back {
+	transform: rotateY(360deg);
 }
