--- a/src/css/layouts/_menu.scss
+++ b/src/css/layouts/_menu.scss
@@ -1,6 +1,5 @@
 .sidebar-wrapper {
-	// visibility: hidden;
-	z-index: -1;
+	display: none;
 	opacity: 0;
 	width: 100%;
 	height: 100%;
@@ -8,9 +7,9 @@
 	@extend %fix-position;
 	transition: all 0.3s ease;
 	&_active {
-		// visibility: visible;
-	opacity: 1;
-	z-index: 0;
+		display: block;
+		opacity: 1;
+		z-index: 0;
 	}
 }
 
