fix: menu opend when body click

--- a/src/css/layouts/_menu.scss
+++ b/src/css/layouts/_menu.scss
@@ -1,9 +1,9 @@
 .sidebar-wrapper {
-	display: none;
 	opacity: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba($color: #000000, $alpha: 0.5);
+	z-index: -1;
 	@extend %fix-position;
 	transition: all 0.3s ease;
 	&_active {
