--- a/src/css/layouts/_main.scss
+++ b/src/css/layouts/_main.scss
@@ -3,8 +3,14 @@
 	justify-content: center;
 	flex-wrap: wrap;
 
-	&>a {
+	& > a {
 		color: $color-text;
 		text-decoration: none;
+	}
+
+	&__title {
+		width: 100%;
+		text-align: center;
+		font-size: 3rem;
 	}
 }
