fix: button menu not fixed when sidebar opened

--- a/english-for-kids/src/css/components/_hamburger.scss
+++ b/english-for-kids/src/css/components/_hamburger.scss
@@ -2,6 +2,7 @@
     transition: all 0.3s ease;
     z-index: 1;
     &_active {
+        position: fixed;
         transform: rotate(90deg);
     }
 }
