--- a/english-for-kids/src/css/components/_cards.scss
+++ b/english-for-kids/src/css/components/_cards.scss
@@ -11,6 +11,12 @@
 		text-align: center;
 		font-size: 2.5rem;
 	}
+	@include media-mobile {
+		height: 330px;
+	}
+	@include media-phone {
+		height: 300px;
+	}
 }
 
 .category-card {
@@ -38,15 +44,21 @@
 
 	&__text {
 		margin-top: 5px;
+		margin-block-start: 0;
+  		margin-block-end: 0;
 	}
 
 	&__rotate {
 		position: relative;
-		top: -70px;
+		top: -45px;
 		left: 300px;
 		width: 35px;
 		height: 43px;
 		background-image: url("../assets/img/rotate.svg");
+		@include media-mobile {
+			margin: auto;
+			position: static;
+		}
 	}
 
 	&_front, &_back {
