--- a/english-for-kids/src/css/components/_cards.scss
+++ b/english-for-kids/src/css/components/_cards.scss
@@ -11,6 +11,7 @@
 		text-align: center;
 		font-size: 2.5rem;
 	}
+
 	@include media-mobile {
 		height: 330px;
 	}
@@ -33,6 +34,9 @@
 		top: 50px;
 		border: 10px solid white;
 		border-radius: 12px;
+	}
+	&:hover {
+		box-shadow: 0px 0px 13px -2px;
 	}
 }
 
@@ -75,6 +79,9 @@
 
 	&_back {
 		transform: rotateY(180deg);
+	}
+	&:hover {
+		box-shadow: 0px 0px 13px -2px;
 	}
 }
 
