--- a/english-for-kids/src/css/components/_cards.scss
+++ b/english-for-kids/src/css/components/_cards.scss
@@ -5,7 +5,6 @@
 	cursor: pointer;
 	border-radius: 10px;
 	perspective: 1000px;
-
 	&__text {
 		margin-top: 60px;
 		text-align: center;
@@ -26,6 +25,10 @@
 		display: flex;
 		justify-content: center;
 		background: linear-gradient(45deg, $color-primary, $color-additional);
+	}
+	
+	&:hover .category-card__wrapper {
+		background: linear-gradient(45deg, lighten($color-primary, 10%), lighten($color-additional, 10%));
 	}
 
 	&__image {
@@ -62,7 +65,7 @@
 		@include media-mobile {
 			margin: auto;
 			position: static;
-		}
+		}	
 	}
 
 	&_front, &_back {
@@ -76,12 +79,11 @@
 		border-radius: 10px;
 		box-shadow: 0px 0px 7px -2px;
 	}
-
 	&_back {
 		transform: rotateY(180deg);
 	}
 	&:hover {
-		box-shadow: 0px 0px 13px -2px;
+		transform: scale(1.05);
 	}
 }
 
