feat: start game button added

--- a/english-for-kids/src/css/abstract/_constants.scss
+++ b/english-for-kids/src/css/abstract/_constants.scss
@@ -3,5 +3,7 @@ $color-additional: #d3e597;
 $color-text: black;
 $color-menu-first: #a18cd1;
 $color-menu-second: #fbc2eb;
+$color-button-first: #FF6700;
+$color-button-second: #FFAB73;
 
 $color-nonactive: grey;
