--- a/english-for-kids/src/css/style.scss
+++ b/english-for-kids/src/css/style.scss
@@ -7,6 +7,7 @@
 @import "./components/switcher";
 @import "./components/hamburger";
 @import "./components/cards";
+@import "./components/button";
 
 @import "./layouts/header";
 @import "./layouts/main";
