feat: repeat button added

--- a/english-for-kids/src/css/abstract/_constants.scss
+++ b/english-for-kids/src/css/abstract/_constants.scss
@@ -5,5 +5,7 @@ $color-menu-first: #a18cd1;
 $color-menu-second: #fbc2eb;
 $color-button-first: #FF6700;
 $color-button-second: #FFAB73;
+$color-retry-first: #DC0055;
+$color-retry-second: #EE6B9E;
 
 $color-nonactive: grey;
