--- a/english-for-kids/src/css/layouts/_stars.scss
+++ b/english-for-kids/src/css/layouts/_stars.scss
@@ -1,6 +1,6 @@
 .stars-block {
     display: flex;
-    flex-direction: row-reverse;
+    align-items: flex-end;
     width: 100%;
     height: 50px;
 }
