--- a/english-for-kids/src/css/layouts/_stars.scss
+++ b/english-for-kids/src/css/layouts/_stars.scss
@@ -1,8 +1,9 @@
 .stars-block {
     display: flex;
-    justify-content: flex-end;
+    flex-wrap: wrap;
     width: 100%;
     height: 50px;
+    overflow: hidden;
 }
 
 .star {
