--- a/english-for-kids/src/css/layouts/_stats.scss
+++ b/english-for-kids/src/css/layouts/_stats.scss
@@ -1,19 +1,43 @@
-.stats__title {
-    width: 100%;
-    font-size: 3rem;
-    text-align: center;
-}
-
-.stats__content {
-    width: 100%;
-    font-size: 2.2rem;
-    border-collapse: collapse;
-
-    & td {
-        border: 1px solid black;
+.stats {
+    & > {
+        width: 100%;
     }
 
-    & td:not(:first-child) {
+    &__title {
+        font-size: 3rem;
         text-align: center;
+    }
+
+    &__content {
+        font-size: 2.2rem;
+        border-collapse: collapse;
+    
+        & td {
+            border: 1px solid black;
+        }
+    
+        & td:not(:first-child) {
+            text-align: center;
+        }
+    }
+
+    &__panel {
+        display: flex;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
+
+.panel {
+    &__button {
+        margin-right: 10px;
+        height: 30px;
+        font-size: 2.2rem;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 5px;
+    }
+    &__delete {
+        color: red;
     }
 }
