fix: page of difficiult words not opend

--- a/english-for-kids/src/css/layouts/_stats.scss
+++ b/english-for-kids/src/css/layouts/_stats.scss
@@ -36,6 +36,7 @@
         border: 1px solid black;
         border-radius: 5px;
         padding: 5px;
+        cursor: pointer;
     }
     &__delete {
         color: red;
