--- a/english-for-kids/src/css/layouts/_stats.scss
+++ b/english-for-kids/src/css/layouts/_stats.scss
@@ -19,6 +19,9 @@
         & td:not(:first-child) {
             text-align: center;
         }
+        @media (max-width: 510px) {
+            font-size: 1.2rem;
+        }
     }
 
     &__panel {
@@ -32,7 +35,7 @@
     &__button {
         margin-right: 10px;
         height: 30px;
-        font-size: 2.2rem;
+        font-size: 2rem;
         border: 1px solid black;
         border-radius: 5px;
         padding: 5px;
