--- a/movie-search/src/css/base/_base.scss
+++ b/movie-search/src/css/base/_base.scss
@@ -1,9 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 html {
     font-size: 10px;
     font-family: 'M PLUS Rounded 1c', Verdana, Tahoma, sans-serif;
+}
+
+h1 {
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
