--- a/movie-search/src/css/base/_base.scss
+++ b/movie-search/src/css/base/_base.scss
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    font-family: 'M PLUS Rounded 1c', Verdana, Tahoma, sans-serif;
+    font-family: 'Comfortaa', Verdana, Tahoma, cursive;
 }
 
 h1 {
