--- a/movie-search/src/css/base/_base.scss
+++ b/movie-search/src/css/base/_base.scss
@@ -3,6 +3,13 @@ html {
     font-family: 'Comfortaa', Verdana, Tahoma, cursive;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
 h1 {
     margin-block-start: 0;
     margin-block-end: 0;
