--- a/movie-search/src/css/components/_swiper.scss
+++ b/movie-search/src/css/components/_swiper.scss
@@ -3,6 +3,18 @@
     width: 1300px;
     overflow: hidden;
     margin: 30px auto;
+    @include media-desktop-big {
+        width: 1100px;
+    }
+    @include media-desktop {
+        width: 700px;
+    }
+    @include media-tablet {
+        width: 380px;
+    }
+    @include media-phone {
+        width: 100%;
+    }
 }
 
 .swiper-pagination {
@@ -23,11 +35,38 @@
     color: $color-additional;
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+    @include media-phone {
+        display: none;
+    }
+}
+
+.swiper-slide {
+    @include media-phone {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .film {
     font-size: 2rem;
     &__image {
         width: 310px;
         height: 425px;
         padding: 10px 0;
+        @include media-desktop-big {
+            width: 250px;
+            height: 365px;
+        }
+        @include media-desktop {
+            width: 180px;
+            height: 295px;
+        }
+        @include media-tablet {
+            width: 140px;
+            height: 255px;
+        }
     }
 }
