--- a/movie-search/src/css/layouts/_header.scss
+++ b/movie-search/src/css/layouts/_header.scss
@@ -7,4 +7,10 @@
     color: $color-text;
     font-size: 2rem;
     background: linear-gradient(45deg, $color-primary, $color-additional);
+    @include media-tablet {
+        font-size: 1.8rem;
+    }
+    @include media-phone {
+        font-size: 1.5rem;
+    }
 }
