--- a/movie-search/src/css/components/_swiper.scss
+++ b/movie-search/src/css/components/_swiper.scss
@@ -1,72 +1,103 @@
 .cards {
-    margin: auto;
-    width: 1300px;
-    overflow: hidden;
-    margin: 30px auto;
-    @include media-desktop-big {
-        width: 1100px;
-    }
-    @include media-desktop {
-        width: 700px;
-    }
-    @include media-tablet {
-        width: 380px;
-    }
-    @include media-phone {
-        width: 100%;
-    }
+  margin: auto;
+  width: 1300px;
+  overflow: hidden;
+  margin: 30px auto;
+
+  @include media-desktop-big {
+    width: 1100px;
+  }
+
+  @include media-desktop {
+    width: 700px;
+  }
+
+  @include media-tablet {
+    width: 380px;
+  }
+
+  @include media-phone {
+    width: 100%;
+  }
 }
 
 .swiper-pagination {
-    position: static;
+  position: static;
 }
 
 .swiper-pagination {
-    margin: 10px 0;
-     &-bullet {
-        width: 13px;
-        height: 13px;
-     }
+  margin: 10px 0;
+
+  &-bullet {
+    width: 13px;
+    height: 13px;
+  }
 }
 
-.swiper-button-next, 
+.swiper-button-next,
 .swiper-button-prev,
 .swiper-pagination-active {
-    color: $color-additional;
+  color: $color-additional;
 }
 
 .swiper-button-next,
 .swiper-button-prev {
-    @include media-phone {
-        display: none;
-    }
+  @include media-phone {
+    display: none;
+  }
 }
 
 .swiper-slide {
-    @include media-phone {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__wrapper {
+  margin: 10px;
+  box-shadow: 0px 0px 7px -2px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &:hover {
+    box-shadow: 0px 0px 13px -2px;
+  }
+  @include media-tablet {
+    margin: 3px;
+  }
 }
 
 .film {
-    font-size: 2rem;
-    &__image {
-        width: 310px;
-        height: 425px;
-        padding: 10px 0;
-        @include media-desktop-big {
-            width: 250px;
-            height: 365px;
-        }
-        @include media-desktop {
-            width: 180px;
-            height: 295px;
-        }
-        @include media-tablet {
-            width: 140px;
-            height: 255px;
-        }
+  font-size: 2rem;
+
+  &__name {
+    padding: 5px;
+  }
+
+  &__image {
+    width: 310px;
+    height: 425px;
+    padding: 10px 0;
+
+    @include media-desktop-big {
+      width: 250px;
+      height: 365px;
     }
+
+    @include media-desktop {
+      width: 200px;
+      height: 315px;
+    }
+
+    @include media-tablet {
+      width: 140px;
+      height: 255px;
+    }
+  }
+  
+  &__year {
+    padding: 5px;
+  }
 }
