feat: changed color on active pagination

--- a/movie-search/src/css/components/_swiper.scss
+++ b/movie-search/src/css/components/_swiper.scss
@@ -35,9 +35,12 @@
 }
 
 .swiper-button-next,
-.swiper-button-prev,
-.swiper-pagination-active {
+.swiper-button-prev {
   color: $color-additional;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: $color-additional;
 }
 
 .swiper-button-next,
