feat: added search form

--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -6,6 +6,7 @@
 @import "./base/base";
 
 @import "./components/swiper";
+@import "./components/search";
 
 @import "./layouts/header";
 @import "./layouts/_footer";
