feat: added keyboard

--- a/movie-search/src/css/abstract/_constants.scss
+++ b/movie-search/src/css/abstract/_constants.scss
@@ -5,3 +5,10 @@ $color-background: #F9F6CB;
 $color-darkens: #003049;
 
 $color-text: #000E28;
+
+$color-keyboard: #757575;
+$color-text-key-button: white;
+$color-key-button: #424242;
+$color-key-button-dark: #303030;
+$color-key-on-hover: #6e9683;
+$color-key-on-active: #07e67a;
