--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -7,6 +7,7 @@
 
 @import "./components/swiper";
 @import "./components/search";
+@import "./components/keyboard";
 
 @import "./layouts/header";
-@import "./layouts/_footer";
+@import "./layouts/footer";
