--- a/movie-search/src/css/components/_search.scss
+++ b/movie-search/src/css/components/_search.scss
@@ -3,11 +3,17 @@
   justify-content: center;
   width: 600px;
   height: 50px;
-  margin: auto;
+  margin: 20px auto;
   border: 1px solid $color-darkens;
   border-radius: 30px;
   box-shadow: 0px 0px 7px -2px;
   overflow: hidden;
+  @include media-tablet {
+    width: 350px;
+  }
+  @include media-phone {
+    width: 300px;
+  }
   &:hover {
     box-shadow: 0px 0px 13px -2px;
   }
@@ -30,6 +36,12 @@
       linear-gradient(90deg, #FCBF49, #F77F00);
     background-position: center;
     background-repeat: no-repeat;
+    @include media-tablet {
+      display: none;
+    }
+    @include media-phone {
+      display: none;
+    }
   }
   &__submit {
     background: 
