feat: added spinner

--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -8,6 +8,7 @@
 @import "./components/swiper";
 @import "./components/search";
 @import "./components/keyboard";
+@import "./components/spinner";
 
 @import "./layouts/header";
 @import "./layouts/footer";
