feat: changed style cards

--- a/movie-search/src/css/components/_swiper.scss
+++ b/movie-search/src/css/components/_swiper.scss
@@ -59,6 +59,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all ease 0.5s;
+  &:hover {
+    transform: scale(1.02);
+  }
 }
 
 .card__wrapper {
