feat: added function show messages

--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -9,6 +9,7 @@
 @import "./components/search";
 @import "./components/keyboard";
 @import "./components/spinner";
+@import "./components/message";
 
 @import "./layouts/header";
 @import "./layouts/footer";
