feat: added icon on message

--- a/movie-search/src/css/components/_message.scss
+++ b/movie-search/src/css/components/_message.scss
@@ -12,7 +12,11 @@
 
   &__icon {
     width: 100px;
-    background: red;
+    background: 
+      url("../assets/error.png"),
+      $color-primary;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   &__head {
