--- a/movie-search/src/css/layouts/_footer.scss
+++ b/movie-search/src/css/layouts/_footer.scss
@@ -1,5 +1,29 @@
 .footer {
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(45deg, $color-additional, $color-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(45deg, #F77F00, #FCBF49);
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    font-size: 2.0rem;
+  }
+  &__github {
+    color: $color-text;
+    text-decoration: none;
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 24px;
+      height: 28px;
+      margin-right: 5px;
+      vertical-align: middle;
+      background: url("../assets/github.png");
+      background-repeat: no-repeat;
+    }
+  }
+  
 }
