feat: add clear button

--- a/movie-search/src/css/abstract/_constants.scss
+++ b/movie-search/src/css/abstract/_constants.scss
@@ -1,6 +1,7 @@
 $color-primary: #D62828;
 $color-additional: #F77F00;
 $color-light: #FCBF49;
+$color-super-light: #FED076;
 $color-background: #F9F6CB;
 $color-darkens: #003049;
 
