feat: add buttons for toggle on night theme

--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -10,6 +10,7 @@
 @import "./components/keyboard";
 @import "./components/spinner";
 @import "./components/message";
+@import "./components/switch-theme";
 
 @import "./layouts/header";
 @import "./layouts/footer";
