feat: added night theme

--- a/movie-search/src/css/abstract/_constants.scss
+++ b/movie-search/src/css/abstract/_constants.scss
@@ -5,6 +5,14 @@ $color-super-light: #FED076;
 $color-background: #F9F6CB;
 $color-darkens: #003049;
 
+$color-background-dark: #303030;
+$color-primary-dark: #4f1616;
+$color-additional-dark: #9e5100;
+$color-light-dark: #9f711a;
+$color-super-light-dark: #ab8a49;
+$color-text-dark: #bebdae;
+$color-card-dark: #454545;
+
 $color-text: #000E28;
 
 $color-keyboard: #757575;
