--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -4,6 +4,7 @@
 @import "./abstract/mixins";
 
 @import "./base/base";
+@import "./base/base-night";
 
 @import "./components/swiper";
 @import "./components/search";
