--- a/movie-search/src/css/layouts/_header.scss
+++ b/movie-search/src/css/layouts/_header.scss
@@ -13,4 +13,8 @@
     @include media-phone {
         font-size: 1.5rem;
     }
+    &_dark {
+        color: $color-text-dark;
+        background: linear-gradient(45deg, $color-primary-dark, $color-additional-dark);
+    }
 }
