feat: added styles for header

--- a/fancy-weather/src/css/style.scss
+++ b/fancy-weather/src/css/style.scss
@@ -1,2 +1,9 @@
+@import "./abstract/constants";
+
 @import "./base/normalize";
 @import "./base/base";
+
+@import "./components/button";
+@import "./components/select";
+
+@import "./layouts/header";
