feat: added fonts to project

--- a/fancy-weather/src/css/base/_base.scss
+++ b/fancy-weather/src/css/base/_base.scss
@@ -1,3 +1,8 @@
+html {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 10px;
+}
+
 body {
   background-position: center;
   background-size: cover;
