--- a/fancy-weather/src/css/components/_button.scss
+++ b/fancy-weather/src/css/components/_button.scss
@@ -7,6 +7,10 @@
   background-color: $color-button;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
+  &_active {
+    background-color: $color-active-button;
+  }
 }
 
 .update {
