feat: added styles for input

--- a/fancy-weather/src/css/abstract/_constants.scss
+++ b/fancy-weather/src/css/abstract/_constants.scss
@@ -1,4 +1,5 @@
 $color-button: rgba(182, 182, 182, 0.5);
 $color-active-button: rgba(99, 99, 99, 0.8);
-$color-select: rgba(99, 99, 99, 0.8);
+$color-select: rgba(99, 99, 99, 0.5);
 $color-text: #ffffff;
+$color-dark-text: #cecece;
