--- a/fancy-weather/src/css/components/_button.scss
+++ b/fancy-weather/src/css/components/_button.scss
@@ -3,6 +3,7 @@
   min-width: 50px;
   height: 50px;
   margin: 0 5px;
+  font-size: 1.4rem;
   color: $color-text;
   background-color: $color-button;
   border: none;
