--- a/fancy-weather/src/css/layouts/_header.scss
+++ b/fancy-weather/src/css/layouts/_header.scss
@@ -1,9 +1,16 @@
 .head {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 85%;
   margin: 20px auto;
   &__settings {
     display: flex;
+  }
+  & > * {
+    @include media-mobile {
+      margin: auto;
+      margin-bottom: 10px;
+    }
   }
 }
