--- a/fancy-weather/src/css/base/_base.scss
+++ b/fancy-weather/src/css/base/_base.scss
@@ -8,4 +8,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  & > * {
+    width: 85%;
+  }
 }
