feat: added icons

--- a/fancy-weather/src/css/style.scss
+++ b/fancy-weather/src/css/style.scss
@@ -7,6 +7,7 @@
 @import "./components/button";
 @import "./components/select";
 @import "./components/input";
+@import "./components/weather-icon";
 
 @import "./layouts/header";
 @import "./layouts/columns";
