--- a/fancy-weather/src/css/style.scss
+++ b/fancy-weather/src/css/style.scss
@@ -1,5 +1,6 @@
 @import "./abstract/constants";
 @import "./abstract/_mixins";
+@import "./abstract/placeholders";
 
 @import "./base/normalize";
 @import "./base/base";
