--- a/fancy-weather/src/css/layouts/_weather.scss
+++ b/fancy-weather/src/css/layouts/_weather.scss
@@ -11,6 +11,10 @@
       margin-right: 20px;
     }
   }
+  &__days {
+    display: flex;
+    flex-wrap: wrap;
+  }
   & > * {
     margin-bottom: 15px;
   }
