feat: added styles for map

--- a/fancy-weather/src/css/style.scss
+++ b/fancy-weather/src/css/style.scss
@@ -9,6 +9,7 @@
 @import "./components/select";
 @import "./components/input";
 @import "./components/weather-icon";
+@import "./components/map";
 
 @import "./layouts/header";
 @import "./layouts/columns";
