--- a/fancy-weather/src/css/layouts/_columns.scss
+++ b/fancy-weather/src/css/layouts/_columns.scss
@@ -1,8 +1,14 @@
 .layout-2-columns {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin: auto;
   & > * {
     width: 50%;
+    min-width: 530px;
+    @include media-mobile {
+      width: auto;
+      min-width: 0;
+    }
   }
 }
