--- a/fancy-weather/src/css/layouts/_weather.scss
+++ b/fancy-weather/src/css/layouts/_weather.scss
@@ -4,16 +4,29 @@
   &__location {
     font-size: 4.4rem;
     font-weight: bold;
+    @include media-tablet {
+      font-size: 3rem;
+    }
+    @include media-phone {
+      font-size: 2rem;
+    }
   }
   &__date {
     font-size: 2.4rem;
     & > * {
       margin-right: 20px;
     }
+    @include media-tablet {
+      font-size: 1.8rem;
+    }
+    @include media-phone {
+      font-size: 1.6rem;
+    }
   }
   &__days {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
   & > * {
     margin-bottom: 15px;
@@ -29,5 +42,19 @@
     justify-content: flex-end;
     width: 30%;
     font-size: 1.8rem;
+    @include media-tablet {
+      font-size: 1.6rem;
+    }
+    @include media-phone {
+      align-items: center;
+      width: 100%;
+      font-size: 1.4rem;
+    }
+  }
+  @include media-mobile {
+    font-size: 10.6rem;
+  }
+  @include media-phone {
+    width: 100%;
   }
 }
