feat: updated adaptive styles

--- a/fancy-weather/src/css/layouts/_weather.scss
+++ b/fancy-weather/src/css/layouts/_weather.scss
@@ -26,10 +26,12 @@
   &__days {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
   }
   & > * {
     margin-bottom: 15px;
+  }
+  @include media-mobile {
+    justify-content: center;
   }
 }
 
