--- a/fancy-weather/src/css/layouts/_columns.scss
+++ b/fancy-weather/src/css/layouts/_columns.scss
@@ -1,6 +1,5 @@
 .layout-2-columns {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   margin: auto;
   & > * {
@@ -10,5 +9,8 @@
       width: auto;
       min-width: 0;
     }
+  }
+  @include media-mobile {
+    justify-content: center;
   }
 }
