feat: added determine class for weather type

--- a/fancy-weather/src/css/components/_weather-icon.scss
+++ b/fancy-weather/src/css/components/_weather-icon.scss
@@ -17,6 +17,9 @@
   &_sun {
     background-image: url("../assets/svg/sun.svg");
   }
+  &_thunder {
+    background-image: url("../assets/svg/thunder.svg");
+  }
 }
 
 .weather__icon {
