--- a/fancy-weather/src/css/components/_map.scss
+++ b/fancy-weather/src/css/components/_map.scss
@@ -1,7 +1,7 @@
 .map {
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
   & > * {
-    min-width: 500px;
     @include media-mobile {
       min-width: 0;
       width: 100%;
@@ -13,8 +13,15 @@
     align-items: flex-end;
     color: $color-text;
     font-size: 1.8rem;
+    margin-top: 10px;
     & > * {
       margin-block-start: 0;
     }
   }
+}
+
+#map {
+  width: 500px;
+  height: 500px;
+  border-radius: 51% 49% 70% 30% / 30% 31% 69% 70%;
 }
