--- a/fancy-weather/src/css/components/_map.scss
+++ b/fancy-weather/src/css/components/_map.scss
@@ -24,4 +24,8 @@
   width: 500px;
   height: 500px;
   border-radius: 51% 49% 70% 30% / 30% 31% 69% 70%;
+  @include media-mobile {
+    width: 300px;
+    height: 300px;
+  }
 }
