feat: added styles for message

--- a/fancy-weather/src/css/style.scss
+++ b/fancy-weather/src/css/style.scss
@@ -10,6 +10,7 @@
 @import "./components/input";
 @import "./components/weather-icon";
 @import "./components/map";
+@import "./components/message";
 
 @import "./layouts/header";
 @import "./layouts/columns";
