--- a/fancy-weather/src/css/abstract/_constants.scss
+++ b/fancy-weather/src/css/abstract/_constants.scss
@@ -1,5 +1,7 @@
 $color-button: rgba(182, 182, 182, 0.5);
 $color-active-button: rgba(99, 99, 99, 0.8);
 $color-select: rgba(99, 99, 99, 0.5);
+$color-message-background: #ffffff;
+$color-message-icon: rgb(99, 99, 99);
 $color-text: #ffffff;
 $color-dark-text: #cecece;
